# sh_history

./: -  pyproject.toml  tmp
src/sh_history/: __main__.py  main.py  tools.py
src/sh_history/bash/: append.py  env.py  main.py  vars.py
src/sh_history/bash/config/: paths.conf
src/sh_history/bash_history/: append.py  db.py  env.py  log.py  main.py  start.py
src/sh_history/bash_history/config/: cmds.conf  paths.conf
src/sh_history/db/: createdb.sql  db.py  dbtable.conf  sh_history.sqbpro  sh_history.sqlite3
src/sh_history/service/: server.py
src/sh_history/shell/: sh_history
src/sh_history/ui/: main.py
src/sh_history/ui/cli/: main.py  setup.py
src/sh_history/ui/cli/bash/: append.py  env.py  file.py  main.py  start.py  vars.py
